--- a/smart-client/pom.xml
+++ b/smart-client/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.jd.si.jupiter.smart</groupId>
+        <groupId>com.si.jupiter.smart</groupId>
         <artifactId>base-smart</artifactId>
     	<version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <groupId>com.jd.si.jupiter.smart.client</groupId>
+    <groupId>com.si.jupiter.smart.client</groupId>
     <artifactId>smart-client</artifactId>
 
     <build>
@@ -54,7 +54,7 @@
             <version>18.0</version>
         </dependency>
         <dependency>
-            <groupId>com.jd.si.jupiter.smart.core</groupId>
+            <groupId>com.si.jupiter.smart.core</groupId>
             <artifactId>smart-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
