--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <artifactId>base-smart</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <properties>
+        <netty.version>4.1.9.Final</netty.version>
+    </properties>
     <modules>
         <module>smart-core</module>
         <module>smart-client</module>
@@ -40,12 +43,12 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.0.36.Final</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-example</artifactId>
-            <version>4.0.36.Final</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.thrift</groupId>
