--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,6 @@
             <version>${netty.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-example</artifactId>
-            <version>${netty.version}</version>
-        </dependency>
-        <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>3.1</version>
@@ -79,6 +74,11 @@
             <version>1.0.7</version>
         </dependency>
         <dependency>
+            <artifactId>base-zk</artifactId>
+            <groupId>com.jd.si.jupiter.zk</groupId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.thrift</groupId>
             <artifactId>libthrift</artifactId>
             <version>0.9.3</version>
@@ -87,6 +87,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
+        </dependency>
+        <!-- fast json -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.22</version>
         </dependency>
     </dependencies>
     <distributionManagement>
